# pyproject-parsing-bug

./: default.nix  pyproject.toml
mypackage/: test_script.py
